proj1/tests/other-tests/oskis-angels_tests/correct/function-type-denotation.py
def fact(n::int)::int:
    if n == 1:
        return 1
    else:
        return n * fact(n - 1)
