proj1/tests/other-tests/oskis-angels_tests/error/function-in-if.py
if True:
    def a():
        return 10
